objects/xDO_MDC_Unified_Phone__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPS_MDC_Email_Phone_Source__c</fullName>
        <label>Data Source</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Unified Phone Number</relationshipLabel>
        <relationshipName>Unified_Phone_Number</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Unified Phone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>xDO_MDC_Contact__c</columns>
        <columns>xDO_MDC_Phone__c</columns>
        <columns>GPS_MDC_Email_Phone_Source__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Unified Phone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unified Phone Number</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>